--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 
 /* all elements inside of the element with the class container */
 .container > * {
-    padding: 40px 30px;
+    padding: 40px;
     border: 1px solid black;
     margin: 5px;
 }
@@ -13,28 +13,42 @@ body {
 .container {
     border : 4px solid black;
     padding : 1%;
+    display : grid;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 header {
     background-color: red;
+    grid-column: 1/5;
+    grid-row: 1;
 }
 
 #leftDiv {
     background-color: orange;
+    grid-column: 1;
+    grid-row: 2/4;
 }
 
 #rightDiv {
     background-color: yellow;
+    grid-column: 2/5;
+    grid-row: 2;
 }
 
 #sectionOne {
     background-color: green;
+    grid-column: 2;
+    grid-row: 3;
 }
 
 #sectionTwo {
     background-color: blue;
+    grid-column: 3/5;
+    grid-row: 3;
 }
 
 footer {
     background-color: purple;
+    grid-column: 1/5;
+    grid-row: 4;
 }
